--- a/index.html
+++ b/index.html
@@ -310,6 +310,13 @@ closeButton.addEventListener("click", () => {
   menu.classList.remove("open"); // Remove class to reset hamburger
 });
 
+    const hamburgerMenu = document.querySelector('.hamburger-menu');
+const mobileNav = document.querySelector('.mobile-nav');
+
+hamburgerMenu.addEventListener('click', function() {
+    mobileNav.classList.toggle('show');
+});
+
 
 
 
