--- a/index.html
+++ b/index.html
@@ -265,13 +265,18 @@
                 <h1>SOCIALS</h1>
                 <h2>Join The Community</h2>
             </div>
-            <div class="social-container">
-               
-                <a href="https://x.com/reindeeronton?s=21">
-                    <img class="social-x" src="x png.png" alt="">
+          <div class="social-container">      
+                <a href="https://x.com/hivefund2025?s=11">
+                    <img class="social-x" src="new x.png" alt="">
                 </a>
-                <a href="https://t.me/reindeerblum">
-                    <img class="social-tg" src="git tg.PNG" alt="">
+                <a href="https://t.me/hivefundofficial">
+                    <img class="social-tg" src="telegram icon.png" alt="">
+                </a>
+                <a href="https://www.tiktok.com/@hivefund?_t=ZN-8vEMVRkR66Y&_r=1">
+                    <img class="social-x" src="tiktok icon.png" alt="">
+                </a>
+                <a href="https://www.instagram.com/hive.fund?igsh=YmZ5anJzNmpoOW9s&utm_source=qr">
+                    <img class="social-tg" src="ig icon.png" alt="">
                 </a>
             </div>
            
