--- a/index.html
+++ b/index.html
@@ -134,7 +134,9 @@
                         Our vision is to build an ecosystem where anyone-regardles of location- can collect, send,
                          and manage donations in a transparent and efficient way.
                     </p>
-                    <div class="whitepaper"> See Whitepaper</div>
+                    <a href="whitepapaer.html" style="text-decoration: none;">
+                        <div class="whitepaper"> See Whitepaper</div>
+                    </a>
                 </div>       
            
             </div>
