--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                
                 <a href="#socials">SOCIALS</a>
             </nav>
-            <div id="menu" class="hamburger-menu">
+<!--            <div id="menu" class="hamburger-menu">
                 <svg
                   width="35px"
                   height="35px"
@@ -55,7 +55,7 @@
               </div>
         
               <!-- Mobile Nav -->
-              <div id="nav-mobile" class="mobile-nav">
+          <!--    <div id="nav-mobile" class="mobile-nav">
                 <div id="close-mobile" class="close">
                   <svg
                     width="800px"
@@ -98,7 +98,7 @@
                     <li><a class="nav-link" href="#conclusion">Conclusion</a></li>
                     <li><a class="nav-link" href="#socials">Socials</a></li>
                   </ul>
-              </div>
+              </div>  -->
         </header>
         <section id="home">
             <div class="flexbox">
