--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <div>Contract address</div>
                             
                             <!-- The content to copy (e.g., the contract address) -->
-                            <span class="text-span" id="contractAddress">5We87tqWQUAWZ9w7pfHDV5fwvgDvWDLzVPzdbkqHmoon</span>
+                            <span class="text-span" id="contractAddress"> ..........</span>
                             
                             <!-- Button to copy the content -->
                             <button onclick="copyCA()">Copy CA</button>
