--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
                             <div>Contract address</div>
                             
                             <!-- The content to copy (e.g., the contract address) -->
-                            <span class="text-span" id="contractAddress"> ..........</span>
+                            <span class="text-span" id="contractAddress">4NktgwQD7RdixGgZNr5an
+                                K6w<br>znsjqhfz9xUqRwEMpump</span>
                             
                             <!-- Button to copy the content -->
                             <button onclick="copyCA()">Copy CA</button>
