--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             
                             <!-- The content to copy (e.g., the contract address) -->
                             <span class="text-span" id="contractAddress">4NktgwQD7RdixGgZNr5an
-                                K6w<br>znsjqhfz9xUqRwEMpump</span>
+                                K6wznsjqhfz9xUqRwEMpump</span>
                             
                             <!-- Button to copy the content -->
                             <button onclick="copyCA()">Copy CA</button>
