--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
                             <div>Contract address</div>
                             
                             <!-- The content to copy (e.g., the contract address) -->
-                            <span class="text-span" id="contractAddress">4NktgwQD7RdixGgZNr5an
-                                K6wznsjqhfz9xUqRwEMpump</span>
+                            <span class="text-span" id="contractAddress"> 4NktgwQD7RdixGgZNr5anK6wznsjqhfz9xUqRwEMpump</span>
                             
                             <!-- Button to copy the content -->
                             <button onclick="copyCA()">Copy CA</button>
