--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                              traditional charitable support into a transparent, fast, and decentralized system.
                         </p> 
                     <div id="w-node-_2d18da7a-de96-bf7e-873b-18011a8b0ee1-5fd9d824" class="row1-copy">
-                            <div>Contract address</div>
+                            <div id="ca">Contract address</div>
                             
                             <!-- The content to copy (e.g., the contract address) -->
                             <span class="text-span" id="contractAddress"> 4NktgwQD7RdixGgZNr5anK6wznsjqhfz9xUqRwEMpump</span>
