--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <div id="ca">Contract address</div>
                             
                             <!-- The content to copy (e.g., the contract address) -->
-                            <span class="text-span" id="contractAddress"> 4NktgwQD7RdixGgZNr5anK</span> <span id="contractAddress">6wznsjqhfz9xUqRwEMpump</span>
+                            <span class="text-span" id="contractAddress"> 4NktgwQD7RdixGgZNr5anK 6wznsjqhfz9xUqRwEMpump</span> <span id="contractAddress"></span>
                             
                             <!-- Button to copy the content -->
                             <button onclick="copyCA()">Copy CA</button>
