--- a/whitepapaer.html
+++ b/whitepapaer.html
@@ -139,12 +139,12 @@ footer p {
 <body>
     <div class="container">
         <header>
-            <h1>HiveFund – Whitepaper</h1>
+            <h1>SSC – Whitepaper</h1>
         </header>
 
         <section id="intro">
             <h2>1. Introduction</h2>
-            <p>HiveFund is a community-driven token built on the Solana blockchain, designed as a tool for digital donations, micro-payments, and fundraising. Its goal is to transform traditional charitable support into a transparent, fast, and decentralized system.</p>
+            <p>SSC is a community-driven token built on the Solana blockchain, designed as a tool for digital donations, micro-payments, and fundraising. Its goal is to transform traditional charitable support into a transparent, fast, and decentralized system.</p>
         </section>
 
         <section id="mission-vision">
@@ -157,7 +157,7 @@ footer p {
 
         <section id="problem-solution">
             <h2>3. Problem & Solution</h2>
-            <p>Many existing donation platforms suffer from a lack of transparency, high fees, and limited global access. HiveFund offers solutions through:</p>
+            <p>Many existing donation platforms suffer from a lack of transparency, high fees, and limited global access. SSC offers solutions through:</p>
             <ul>
                 <li>Full decentralization</li>
                 <li>Low transaction costs via Solana</li>
@@ -178,7 +178,7 @@ footer p {
 
         <section id="tokenomics">
             <h2>5. Tokenomics</h2>
-            <p><strong>Total Supply:</strong> 1,000,000,000 HFCOIN</p>
+            <p><strong>Total Supply:</strong> 1,000,000,000 SSC</p>
             <h3>Distribution:</h3>
             <ul>
                 <li>50% – Community & Rewards</li>
@@ -200,7 +200,7 @@ footer p {
 
         <section id="community-governance">
             <h2>7. Community & Governance</h2>
-            <p>HiveFund is a community-led project — future decisions will be governed through DAO mechanisms.</p>
+            <p>SSC is a community-led project — future decisions will be governed through DAO mechanisms.</p>
             <p>Token holders will have a say in the project’s direction and development milestones.</p>
         </section>
 
@@ -214,7 +214,7 @@ footer p {
         </section>
 
         <section id="competitive-advantages">
-            <h2>9. Competitive Advantages (Why HiveFund?)</h2>
+            <h2>9. Competitive Advantages (Why SSC?)</h2>
             <ul>
                 <li>Real-world use case and impact</li>
                 <li>Clear mission aligned with social good</li>
@@ -234,11 +234,11 @@ footer p {
 
         <section id="conclusion">
             <h2>11. Conclusion</h2>
-            <p>HiveFund is more than just a memecoin — it’s a movement to use blockchain for good. Join our mission and help build a decentralized donation revolution!</p>
+            <p>SSC is more than just a memecoin — it’s a movement to use blockchain for good. Join our mission and help build a decentralized donation revolution!</p>
         </section>
 
         <footer>
-            <p>&copy; 2025 HiveFund. All rights reserved.</p>
+            <p>&copy; 2025 SSC. All rights reserved.</p>
         </footer>
     </div>
 </body>
