--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <header>
             <div class="logo">
-                <img id="navimg" src="ssc1.jpg" alt="logo" />
+                <img id="navimg" src="ssc1.JPG" alt="logo" />
                 <a href="/">SANTA SEVERA COIN</a>
               </div>    
             <nav>
@@ -134,7 +134,7 @@
                         
                 </div>       
             <div class="flexbox-image">
-                <img src="HFCOIN 1.jpg" alt="">
+                <img src="ssc2.JPG" alt="">
             </div>
             </div>
         </section>
@@ -144,7 +144,7 @@
         <section id="mission">
             <div class="mission-flexbox">
                 <div class="mission-flexbox-image">
-                    <img src="ssc2.jpg" alt="">
+                    <img src="ssc3.JPG" alt="">
                 </div>
                 <div class="mission-flexbox-text">    
                     <h1>Our Mission & Vision</h1>
@@ -252,19 +252,19 @@
             <div class="whyhfc-flex-container">
                
                 <div class="whyhfc-flex-item">
-                    <img src="ssc3.jpg" alt="Real-world use case" class="icon">
+                    <img src="ssc3.JPG" alt="Real-world use case" class="icon">
                     <h3>Real-world use case and impact</h3>
                 </div>
                 <div class="whyhfc-flex-item">
-                    <img src="ssc3.jpg" alt="Clear mission" class="icon">
+                    <img src="ssc3.JPG" alt="Clear mission" class="icon">
                     <h3>Clear mission aligned with social good</h3>
                 </div>
                 <div class="whyhfc-flex-item">
-                    <img src="ssc3.jpg" alt="Friendly branding" class="icon">
+                    <img src="ssc3.JPG" alt="Friendly branding" class="icon">
                     <h3>Recognizable and friendly branding (bee mascot)</h3>
                 </div>
                 <div class="whyhfc-flex-item">
-                    <img src="ssc3.jpg" alt="Strong community" class="icon">
+                    <img src="ssc3.JPG" alt="Strong community" class="icon">
                     <h3>Strong and growing community base</h3>
                 </div>
             </div>
